<resources>
    <string name="app_name">LeaderBoard</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="bt_submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
</resources>