<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ProjectSubmission">

    <TextView
        android:textSize="030sp"
        android:textColor="#FF6D00"
        android:layout_weight="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_submission" />

    <View
        android:paddingTop="10dp"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/black"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/first_name_et"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/last_name_et"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:hint="@string/last_name" />

    </LinearLayout>

    <EditText
        android:id="@+id/email_et"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:hint="@string/email_address"
        />

    <EditText
        android:id="@+id/url_et"
        android:layout_weight="1"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_on_github_link" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_marginTop="50dp"
        android:layout_weight="5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/bt_submit" />
</LinearLayout>
</ScrollView>